// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: bitbucket cloud, edit 1`] = `
<div>
  <div>
    <AlmBindingDefinitionFormField
      autoFocus={true}
      help="settings.almintegration.form.name.bitbucketcloud.help"
      id="name.bitbucket"
      maxLength={100}
      onFieldChange={[MockFunction]}
      propKey="key"
      value="key"
    />
    <AlmBindingDefinitionFormField
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.form.workspace.bitbucketcloud.help"
          id="settings.almintegration.form.workspace.bitbucketcloud.help"
          values={
            Object {
              "example": <React.Fragment>
                https://bitbucket.org/
                <strong>
                  {workspace}
                </strong>
                /{repository}
              </React.Fragment>,
            }
          }
        />
      }
      id="workspace.bitbucketcloud"
      maxLength={2000}
      onFieldChange={[MockFunction]}
      propKey="workspace"
      value="workspace"
    />
    <AlmBindingDefinitionFormField
      help="settings.almintegration.form.oauth_key.bitbucketcloud.help"
      id="client_id.bitbucketcloud"
      onFieldChange={[MockFunction]}
      propKey="clientId"
      value="client1"
    />
    <AlmBindingDefinitionFormField
      help="settings.almintegration.form.oauth_secret.bitbucketcloud.help"
      id="client_secret.bitbucketcloud"
      onFieldChange={[MockFunction]}
      overwriteOnly={true}
      propKey="clientSecret"
      value="**clientsecret**"
    />
  </div>
</div>
`;

exports[`should render correctly: bitbucket cloud, empty 1`] = `
<div>
  <div>
    <AlmBindingDefinitionFormField
      autoFocus={true}
      help="settings.almintegration.form.name.bitbucketcloud.help"
      id="name.bitbucket"
      maxLength={100}
      onFieldChange={[MockFunction]}
      propKey="key"
      value=""
    />
    <AlmBindingDefinitionFormField
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.form.workspace.bitbucketcloud.help"
          id="settings.almintegration.form.workspace.bitbucketcloud.help"
          values={
            Object {
              "example": <React.Fragment>
                https://bitbucket.org/
                <strong>
                  {workspace}
                </strong>
                /{repository}
              </React.Fragment>,
            }
          }
        />
      }
      id="workspace.bitbucketcloud"
      maxLength={2000}
      onFieldChange={[MockFunction]}
      propKey="workspace"
      value=""
    />
    <AlmBindingDefinitionFormField
      help="settings.almintegration.form.oauth_key.bitbucketcloud.help"
      id="client_id.bitbucketcloud"
      onFieldChange={[MockFunction]}
      propKey="clientId"
      value=""
    />
    <AlmBindingDefinitionFormField
      help="settings.almintegration.form.oauth_secret.bitbucketcloud.help"
      id="client_secret.bitbucketcloud"
      onFieldChange={[MockFunction]}
      overwriteOnly={false}
      propKey="clientSecret"
      value=""
    />
  </div>
</div>
`;

exports[`should render correctly: bitbucket server, edit 1`] = `
<div>
  <div>
    <AlmBindingDefinitionFormField
      autoFocus={true}
      help="settings.almintegration.form.name.bitbucket.help"
      id="name.bitbucket"
      maxLength={100}
      onFieldChange={[MockFunction]}
      propKey="key"
      value="key"
    />
    <AlmBindingDefinitionFormField
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.form.url.bitbucket.help"
          id="settings.almintegration.form.url.bitbucket.help"
          values={
            Object {
              "example": "https://bitbucket-server.your-company.com",
            }
          }
        />
      }
      id="url.bitbucket"
      maxLength={2000}
      onFieldChange={[MockFunction]}
      propKey="url"
      value="http://bbs.enterprise.com"
    />
    <AlmBindingDefinitionFormField
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.form.personal_access_token.bitbucket.help"
          id="settings.almintegration.form.personal_access_token.bitbucket.help"
          values={
            Object {
              "pat": <a
                href="https://confluence.atlassian.com/bitbucketserver0515/personal-access-tokens-961275199.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                settings.almintegration.form.personal_access_token.bitbucket.help.url
              </a>,
            }
          }
        />
      }
      id="personal_access_token"
      isTextArea={true}
      onFieldChange={[MockFunction]}
      overwriteOnly={true}
      propKey="personalAccessToken"
      value="asdf1234"
    />
  </div>
</div>
`;

exports[`should render correctly: bitbucket server, empty 1`] = `
<div>
  <div>
    <AlmBindingDefinitionFormField
      autoFocus={true}
      help="settings.almintegration.form.name.bitbucket.help"
      id="name.bitbucket"
      maxLength={100}
      onFieldChange={[MockFunction]}
      propKey="key"
      value=""
    />
    <AlmBindingDefinitionFormField
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.form.url.bitbucket.help"
          id="settings.almintegration.form.url.bitbucket.help"
          values={
            Object {
              "example": "https://bitbucket-server.your-company.com",
            }
          }
        />
      }
      id="url.bitbucket"
      maxLength={2000}
      onFieldChange={[MockFunction]}
      propKey="url"
      value=""
    />
    <AlmBindingDefinitionFormField
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.form.personal_access_token.bitbucket.help"
          id="settings.almintegration.form.personal_access_token.bitbucket.help"
          values={
            Object {
              "pat": <a
                href="https://confluence.atlassian.com/bitbucketserver0515/personal-access-tokens-961275199.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                settings.almintegration.form.personal_access_token.bitbucket.help.url
              </a>,
            }
          }
        />
      }
      id="personal_access_token"
      isTextArea={true}
      onFieldChange={[MockFunction]}
      overwriteOnly={false}
      propKey="personalAccessToken"
      value=""
    />
  </div>
</div>
`;

exports[`should render correctly: variant select 1`] = `
<div>
  <strong>
    settings.almintegration.form.choose_bitbucket_variant
  </strong>
  <RadioToggle
    className="little-spacer-top big-spacer-bottom"
    disabled={false}
    name="variant"
    onCheck={[MockFunction]}
    options={
      Array [
        Object {
          "label": "Bitbucket Server",
          "value": "bitbucket",
        },
        Object {
          "label": "Bitbucket Cloud",
          "value": "bitbucketcloud",
        },
      ]
    }
    value="bitbucket"
  />
  <div>
    <AlmBindingDefinitionFormField
      autoFocus={true}
      help="settings.almintegration.form.name.bitbucket.help"
      id="name.bitbucket"
      maxLength={100}
      onFieldChange={[MockFunction]}
      propKey="key"
      value=""
    />
    <AlmBindingDefinitionFormField
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.form.url.bitbucket.help"
          id="settings.almintegration.form.url.bitbucket.help"
          values={
            Object {
              "example": "https://bitbucket-server.your-company.com",
            }
          }
        />
      }
      id="url.bitbucket"
      maxLength={2000}
      onFieldChange={[MockFunction]}
      propKey="url"
      value=""
    />
    <AlmBindingDefinitionFormField
      help={
        <FormattedMessage
          defaultMessage="settings.almintegration.form.personal_access_token.bitbucket.help"
          id="settings.almintegration.form.personal_access_token.bitbucket.help"
          values={
            Object {
              "pat": <a
                href="https://confluence.atlassian.com/bitbucketserver0515/personal-access-tokens-961275199.html"
                rel="noopener noreferrer"
                target="_blank"
              >
                settings.almintegration.form.personal_access_token.bitbucket.help.url
              </a>,
            }
          }
        />
      }
      id="personal_access_token"
      isTextArea={true}
      onFieldChange={[MockFunction]}
      overwriteOnly={false}
      propKey="personalAccessToken"
      value=""
    />
  </div>
</div>
`;
